--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
